update env.yml and add pip packages

--- a/irish_statutes/environment.yml
+++ b/irish_statutes/environment.yml
@@ -8,5 +8,6 @@ dependencies:
   - scikit-learn
   - pandas
   - ipython
+  - scalene
   - psycopg2
 prefix: /opt/homebrew/anaconda3/envs/irish_statutes
