--- a/irish_statutes/requirements.txt
+++ b/irish_statutes/requirements.txt
@@ -3,59 +3,59 @@ aiohttp==3.10.10
 aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
-appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
+appdirs==1.4.4
 asgiref==3.8.1
-asttokens @ file:///home/conda/feedstock_root/build_artifacts/asttokens_1698341106958/work
+asttokens==2.4.1
 asyncpg==0.29.0
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1722977137225/work
-Automat @ file:///home/conda/feedstock_root/build_artifacts/automat_1724116770503/work
-bcrypt @ file:///Users/runner/miniforge3/conda-bld/bcrypt_1724960418893/work
-beautifulsoup4 @ file:///private/var/folders/k1/30mswbxs7r1g6zwn8y4fyt500000gp/T/abs_94rx5n7wo9/croot/beautifulsoup4-split_1718029832430/work
-Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1725267563793/work
-certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1725278078093/work/certifi
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1725560578465/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1728479282467/work
+attrs==24.2.0
+Automat==24.8.1
+bcrypt==4.2.0
+beautifulsoup4==4.12.3
+Brotli==1.1.0
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
 click==8.1.7
-cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1729059237860/work
+cloudpickle==3.1.0
 coloredlogs==15.0.1
 constantly==15.1.0
-cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography-split_1725443126321/work
-cssselect @ file:///home/conda/feedstock_root/build_artifacts/cssselect_1666980406338/work
-Cython @ file:///Users/runner/miniforge3/conda-bld/cython_1725378941081/work
+cryptography==43.0.1
+cssselect==1.2.0
+Cython==3.0.11
 dataclasses-json==0.6.7
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1641555617451/work
-defusedxml @ file:///home/conda/feedstock_root/build_artifacts/defusedxml_1615232257335/work
+decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.14
 dirtyjson==1.0.8
 distro==1.9.0
-exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1720869315914/work
-executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1725214404607/work
-filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1726613473834/work
+exceptiongroup==1.2.2
+executing==2.1.0
+filelock==3.16.1
 frozenlist==1.4.1
 fsspec==2024.9.0
 greenlet==3.1.1
 h11==0.14.0
-h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1634280454336/work
+h2==4.1.0
 hpack==4.0.0
 htmltools==0.6.0
 httpcore==1.0.6
 httpx==0.27.2
 huggingface-hub==0.26.0
 humanfriendly==10.0
-hyperframe @ file:///home/conda/feedstock_root/build_artifacts/hyperframe_1619110129307/work
-hyperlink @ file:///home/conda/feedstock_root/build_artifacts/hyperlink_1610092164190/work
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1726459485162/work
-incremental @ file:///home/conda/feedstock_root/build_artifacts/incremental_1722304162160/work
+hyperframe==6.0.1
+hyperlink==21.0.0
+idna==3.10
+incremental==24.7.2
 InstructorEmbedding==1.0.1
-ipython @ file:///home/conda/feedstock_root/build_artifacts/ipython_1727944696411/work
--e git+ssh://git@github.com/richiemorrisroe/rag-irish-laws.git@45ea5a01c906758fb6207bdd97867ac61b0bfce0#egg=irish_statutes&subdirectory=irish_statutes
-itemadapter @ file:///home/conda/feedstock_root/build_artifacts/itemadapter_1715111453050/work
-itemloaders @ file:///home/conda/feedstock_root/build_artifacts/itemloaders_1727723151013/work
-jedi @ file:///home/conda/feedstock_root/build_artifacts/jedi_1696326070614/work
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1715127149914/work
+ipython==8.28.0
+irish_statutes==0.1
+itemadapter==0.9.0
+itemloaders==1.3.2
+jedi==0.19.1
+Jinja2==3.1.4
 jiter==0.6.1
-jmespath @ file:///home/conda/feedstock_root/build_artifacts/jmespath_1655568249366/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1714665484399/work
+jmespath==1.0.1
+joblib==1.4.2
 linkify-it-py==2.0.3
 llama-cloud==0.1.4
 llama-index==0.11.18
@@ -79,13 +79,13 @@ llama-index-storage-kvstore-redis==0.2.0
 llama-index-vector-stores-postgres==0.2.6
 llama-index-vector-stores-redis==0.3.4
 llama-parse==0.5.10
-lxml @ file:///Users/runner/miniforge3/conda-bld/lxml_1725442094243/work
-markdown-it-py @ file:///home/conda/feedstock_root/build_artifacts/markdown-it-py_1686175045316/work
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1729351340817/work
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 marshmallow==3.23.0
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1713250518406/work
+matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
-mdurl @ file:///home/conda/feedstock_root/build_artifacts/mdurl_1704317613764/work
+mdurl==0.1.2
 ml-dtypes==0.4.1
 mlx==0.19.0
 mpmath==1.3.0
@@ -99,87 +99,86 @@ numpy==1.26.4
 ollama==0.3.3
 openai==1.52.0
 orjson==3.10.11
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1718189413536/work
-pandas @ file:///Users/runner/miniforge3/conda-bld/pandas_1726878422361/work
-parsel @ file:///home/conda/feedstock_root/build_artifacts/parsel_1714637952682/work
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1712320355065/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1706113125309/work
+packaging==24.1
+pandas==2.2.3
+parsel==1.9.1
+parso==0.8.4
+pexpect==4.9.0
 pgvector==0.2.5
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+pickleshare==0.7.5
 pillow==11.0.0
+pip==24.2
 prompt-toolkit==3.0.36
 propcache==0.2.0
-Protego @ file:///home/conda/feedstock_root/build_artifacts/protego_1712316608681/work
-psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1729847073461/work
-psycopg2 @ file:///Users/runner/miniforge3/conda-bld/psycopg2-split_1727892638049/work
+Protego==0.3.1
+psutil==6.1.0
+psycopg2==2.9.9
 psycopg2-binary==2.9.10
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1721585709575/work
+ptyprocess==0.7.0
+pure_eval==0.2.3
 py-spy==0.3.14
-pyasn1 @ file:///home/conda/feedstock_root/build_artifacts/pyasn1_1726839225972/work
-pyasn1_modules @ file:///home/conda/feedstock_root/build_artifacts/pyasn1-modules_1726029546107/work
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1711811537435/work
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 PyDispatcher==2.0.5
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1714846767233/work
-pynvml @ file:///home/conda/feedstock_root/build_artifacts/pynvml_1639061605391/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1722587090966/work
+Pygments==2.18.0
+pynvml==11.4.1
+pyOpenSSL==24.2.1
 pypdf==4.3.1
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1709299778482/work
+PySocks==1.7.1
+python-dateutil==2.9.0
 python-multipart==0.0.17
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1706886791323/work
+pytz==2024.1
 PyYAML==6.0.2
 questionary==2.0.1
-queuelib @ file:///home/conda/feedstock_root/build_artifacts/queuelib_1714989370868/work
+queuelib==1.7.0
 redis==5.2.0
 redisvl==0.3.5
 regex==2024.9.11
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1717057054362/work
-requests-file @ file:///home/conda/feedstock_root/build_artifacts/requests-file_1716356557602/work
-rich @ file:///home/conda/feedstock_root/build_artifacts/rich_1729622917073/work/dist
+requests==2.32.3
+requests-file==2.1.0
+rich==13.9.3
 safetensors==0.4.5
-scalene @ file:///Users/runner/miniforge3/conda-bld/scalene_1714760246976/work
-scikit-learn @ file:///Users/runner/miniforge3/conda-bld/scikit-learn_1726082669650/work/dist/scikit_learn-1.5.2-cp312-cp312-macosx_11_0_arm64.whl#sha256=c8ea39773eafcbeeb602482bb255def5febff2e4642648568c8cac21cb5b3839
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy-split_1724327085606/work/dist/scipy-1.14.1-cp312-cp312-macosx_11_0_arm64.whl#sha256=9aa3ae0192a0b625891a89eabed8c779d6332696340b63e758b1b8ec6331516d
-Scrapy @ file:///Users/runner/miniforge3/conda-bld/scrapy_1715855611252/work
+scikit-learn==1.5.2
+scipy==1.14.1
 sentence-transformers==2.7.0
-service-identity @ file:///home/conda/feedstock_root/build_artifacts/service-identity_1723586238340/work
+service-identity==24.1.0
 setuptools==75.1.0
 shiny==1.2.0
 shinyswatch==0.8.0
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+six==1.16.0
 sniffio==1.3.1
-soupsieve @ file:///Users/builder/cbouss/perseverance-python-buildout/croot/soupsieve_1699282494776/work
+soupsieve==2.5
 SQLAlchemy==2.0.36
-stack-data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1669632077133/work
+stack-data==0.6.2
 starlette==0.41.2
 striprtf==0.0.26
 sympy==1.13.1
 tabulate==0.9.0
 tenacity==8.5.0
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1714400101435/work
+threadpoolctl==3.5.0
 tiktoken==0.8.0
-tldextract @ file:///home/conda/feedstock_root/build_artifacts/tldextract_1710828352964/work
+tldextract==5.1.2
 tokenizers==0.20.1
 torch==2.5.0
 tqdm==4.66.5
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1713535121073/work
+traitlets==5.14.3
 transformers==4.45.2
-Twisted @ file:///Users/runner/miniforge3/conda-bld/twisted_1728651216690/work
+Twisted==24.7.0
+typing_extensions==4.12.2
 typing-inspect==0.9.0
-typing_extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1717802530399/work
-tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1727140567071/work
+tzdata==2024.2
 uc-micro-py==1.0.3
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1726496430923/work
+urllib3==2.2.3
 uvicorn==0.32.0
-w3lib @ file:///home/conda/feedstock_root/build_artifacts/w3lib_1718193888625/work
+w3lib==2.2.1
 watchfiles==0.24.0
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1704731205417/work
+wcwidth==0.2.13
 websockets==13.1
 wheel==0.44.0
 wrapt==1.16.0
 yarl==1.15.4
-zope.interface @ file:///Users/runner/miniforge3/conda-bld/zope.interface_1728568728236/work
+zope.interface==7.1.0
 zstandard==0.23.0
