--- a/irish_statutes/docker-compose.yml
+++ b/irish_statutes/docker-compose.yml
@@ -1,16 +1,48 @@
 version: '3.8'
-
 services:
   pgvector:
     image: pgvector/pgvector:pg17
     environment:
       - POSTGRES_PASSWORD=pword
+      - POSTGRES_DB=postgres
     ports:
       - "5432:5432"
     volumes:
       - ./pgdata:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+
+  ollama:
+    image: ollama/ollama
+    ports:
+      - "11434:11434"
+    volumes:
+      - ollama:/root/.ollama
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+  app:
+    build: .
+    depends_on:
+      pgvector:
+        condition: service_healthy
+      ollama:
+        condition: service_healthy
+    environment:
+      DATABASE_URL: postgresql://postgres:pword@pgvector:5432/postgres
+      OLLAMA_HOST: http://ollama:11434  # Add this environment variable
+    ports:
+      - "8050:8050"
+    volumes:
+      - .:/app
+
+volumes:
+  pgdata:
+  ollama:
