--- a/irish_statutes/docker-compose.yml
+++ b/irish_statutes/docker-compose.yml
@@ -17,13 +17,13 @@ services:
       start_period: 10s
 
   ollama:
-    image: ollama/ollama
+    build: ./ollama/.
     ports:
       - "11434:11434"
     volumes:
       - ollama:/root/.ollama
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:11434"]
+      test: ["CMD-SHELL", "true"]
       interval: 10s
       timeout: 5s
       retries: 5
