--- a/irish_statutes/docker-compose.yml
+++ b/irish_statutes/docker-compose.yml
@@ -22,6 +22,12 @@ services:
       - "11434:11434"
     volumes:
       - ollama:/root/.ollama
+    deploy:
+      resources:
+        limits:
+          memory: 16G
+        reservations:
+          memory: 12G
     healthcheck:
       test: ["CMD-SHELL", "true"]
       interval: 10s
