update ollama dockerfile with scripts

--- a/irish_statutes/ollama/Dockerfile
+++ b/irish_statutes/ollama/Dockerfile
@@ -1,5 +1,16 @@
 FROM ollama/ollama
 
-# Install curl
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+# Install curl and wget
+RUN apt-get update && \
+    apt-get install -y curl wget && \
+    rm -rf /var/lib/apt/lists/*
 
+# Copy a script to pull and initialize the model
+COPY init-model.sh /init-model.sh
+RUN chmod +x /init-model.sh
+
+# Use an entrypoint script to ensure the model is loaded
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
